# emc-case-study

./: .gitignore  GIT.md  LICENSE  README.md  requirements.txt  setup.cfg
data/: levels.txt
log/: config.json
scripts/: add_features.py  combined_optimal_finder.py  cost_calculator.py  get_json_size.py  label_scen_sim.py  load_drug_efficacy.R  load_metadata.R  load_monitor_age.R  merge_age_cats.py  merge_csv.py  merge_drug_efficacy_csv.py  merge_monitor_age_csv.py  montecarlo_simulation.py  pipeline.py  plot_average_costs.py  plot_model_accuracy.py  plot_montecarlo.py  plot_true_signal.py  process_drug_efficacy.py  process_regression_plot_data.py  save_pretty.py  set_cost.py  set_expected_inf_level.py  set_init_target.py  test_graphing.py
src/emc/: derivative_graph.py  log.py  main.py  test.py  util.py
src/emc/classifiers/: __init__.py  classifier.py  gradient_boosting.py  lstm.py  single_gradient_booster.py  single_gradient_booster_bayesian.py  single_gradient_booster_default.py  single_gradient_booster_randomCV.py
src/emc/data/: __init__.py  constants.py  cost_calculator.py  data_loader.py  data_model.py  derivative_graph.py  infection_tree.py  label_generator.py  level_builder.py  monte_carlo_simulation.py  montecarlo_simulation.py  neighborhood.py  neighborhood_descent.py  policy_manager.py  test.py
src/emc/model/: __init__.py  costs.py  label.py  policy.py  policy_manager  policy_manager.py  scenario.py  score.py  simulation.py  time.py  time_costs.py
src/emc/regressors/: __init__.py  gradient_booster_default.py  gradient_booster_optuna.py  regressor.py  (+1 more)
