[metadata]
name = Optimal monitoring strategy for drug efficacy
version = 0.0.1
description = Seminar Logistic Case Studies (FEM21033)
author = Matthijs de Keijzer, Alexander Neutel, Eertze van de Riet, Marinthe de Vries
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
package_dir =
    =src
